# kanban-terminal

./: Cargo.toml  README.md
src/: data.rs  main.rs
