[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
chrono = "0.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
[dependencies.serde_with]
version = "1.8.1"
features = [ "chrono" ]